--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,19 @@ body{
   background-color: #d6e2f0;
   background-color: hsl(212, 45%, 89%);
   font-family: 'Outfit', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .qr-card{
   background-color: white;
   background-color: hsl(0, 0%, 100%);
   text-align: center;
-  width: 288px;
-  margin: 100px auto;
+  width: 300px;
+  height: 460px;
   border-radius: 5%;
 }
 
@@ -20,19 +25,23 @@ body{
   margin: 5%;
 }
 
-.bold-text{
+h1{
   font-weight: 700;
   color: black;
   color: hsl(218, 44%, 22%);
   margin-top: 0;
-  }
+  font-size: 20px;
+}
 
-.regular-text{
-  font-weight: 400;
+p{
   color: black;
   color: hsl(220, 15%, 55%);
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.text-div{
   margin: 0 10% 0 10%;
-  padding-bottom: 10%;
 }
 
 .attribution { font-size: 11px; text-align: center; }
